fix tooltip being invisible
fix #65

--- a/data/stylus/notes.styl
+++ b/data/stylus/notes.styl
@@ -22,10 +22,6 @@
     padding: 0 3px 12px;
   }
 
-  .background {
-    background-color: inherit;
-  }
-
   listview > row {
     background-color: inherit;
   }
