--- a/data/stylus/style.styl
+++ b/data/stylus/style.styl
@@ -6,9 +6,6 @@
   transition: 0.35s background-color ease-out, 0.35s color ease-out;
 }
 
-.header-bar {
-  color: inherit;
-}
 
 .text-view {
   background-color: transparent;
